fix person/profile display when in feat post. text now wraps. #5061

--- a/openscholar/themes/hwpi_basetheme/css/hwpi.base.css
+++ b/openscholar/themes/hwpi_basetheme/css/hwpi.base.css
@@ -634,6 +634,9 @@ article.node-teaser.node-person .field-name-field-person-photo ~ .node-content {
   padding: 15px 0 30px;
 }
 
+.block-boxes-os_boxes_manual_list .node-teaser.node-person {
+  padding: 0 0 30px;
+}
 
 .person-teaser-wrapper {
 	display:table-cell;
@@ -643,6 +646,13 @@ article.node-teaser.node-person .field-name-field-person-photo ~ .node-content {
 .node-link.node-teaser {
 	padding: 10px 0 5px;
 	}
+
+
+.block-boxes-os_boxes_manual_list .node-person.node-teaser .field-name-field-person-photo,
+.block-boxes-os_boxes_manual_list .node-person.node-teaser .person-teaser-wrapper {
+	display:inline;
+}
+
 
 
 /**
